--- a/Project presentation/theStyle.css
+++ b/Project presentation/theStyle.css
@@ -13,9 +13,6 @@ body {
   left: 75%;
   opacity: 80%;
 }
-#img-lettere{
-  width: 350px;
-}
 
 .star {
   width: 20px;
@@ -100,10 +97,6 @@ a.star.glow{
   text-align: center;
   font-size: 20px;
   font-style: italic;
-  position: absolute;
-  bottom: -10%;
-  left: 250px;
-  right: 250px;
   background-color: black;
   color: white;
   padding-left: 50px;
@@ -149,13 +142,11 @@ a.star.glow{
   padding: 1%;
 }
 .container img {
-  position: absolute;
-  top: 30px;
-  left: 0;
   opacity: 80%;
-  right: 0;
   margin: 0 auto;
-  text-align: center;
+  display: table;
+    padding-top: 1rem;
+        max-width: 100%;
 }
 
 h1 {
@@ -170,14 +161,13 @@ h1 {
 .text-block1 {
   font-size: 20px;
   font-style: italic;
-  position: absolute;
-  top: 150px;
-  left: 380px;
-  right: 0px;
   background-color: rgba(0, 0, 0, 0.4);
   color: white;
   padding-left: 30px;
   padding-right: 30px;
+  margin: 0 auto;
+  display: table;
+  padding-top: 8rem;
 }
 
 @keyframes glitter {
@@ -471,64 +461,4 @@ html {
   border-radius: 4px;
   color: #000;
   cursor: pointer;
-}
-
-
-@media (max-width: 1250px) {
-  .title{
-    left: 50%;
-  }
-  #img-lettere{
-    width: 250px;
-  }
-  .sky-wrapper .moon{
-    left: 40%;
-    top: 65%;
-  }
-  /* .glow{
-    left: 40%;
-  } */
-  .star1 {
-    left: 20%;
-  }
-  .star2 {
-    left: 35%;
-
-  }
-  .star3 {
-    left: 36%;
-    top: 42%;
-
-
-  }
-  .star4 {
-    left: 15%;
-    top: 55%;
-
-  }
-  .star5 {
-    left: 20%;
-    top: 78%;
-
-
-  }
-  .star6 {
-    left: 45%;
-    top: 88%;
-
-  }
-  .star7 {
-    left: 75%;
-    top: 78%;
-  }
-
-}
-
-
-
-@media (max-width: 450px) {
-  .title{
-    left: 40%;
-  }
-
 }
