--- a/CSS Files/styles.css
+++ b/CSS Files/styles.css
@@ -655,9 +655,36 @@ transform: rotate(0deg)
 .char_model .owl-carousel {
   margin: 50px 0 120px;
 }
+
 .char_model .owl-carousel .owl-nav {
   display: block !important;
 }
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 999;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  pointer-events: none;
+}
+
+#overlay.overlay-active {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.disable-background {
+  pointer-events: none;
+}
+
+
 
 
 
