--- a/CSS Files/styles.css
+++ b/CSS Files/styles.css
@@ -554,14 +554,13 @@ transform: rotate(0deg)
 }
 
 .animation-wrapper {
-  background:rgba(0, 0, 0, 0.5);
   height: 30vh;
   background: #000c4f;
   display: flex;
   flex-direction: column;
   align-items: bottom;
   justify-content:end;
- 
+  overflow: hidden;
 }
 
 .animation-anim-title{
@@ -599,6 +598,7 @@ transform: rotate(0deg)
     transform: rotate(360deg)
   }
 }
+
 .char_model .WIP-wrapper .WIP-anim-title #WIP {
   font-size: 3.5em;
   margin-bottom: 30px;
